KqaPro_Parser/sparql/SparqlParser.py
# Generated from Sparql.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SparqlParser ( Parser ):

    grammarFileName = "Sparql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'BASE'", "'PREFIX'", "'SELECT'", "'DISTINCT'", 
                     "'REDUCED'", "'*'", "'CONSTRUCT'", "'DESCRIBE'", "'ASK'", 
                     "'FROM'", "'NAMED'", "'WHERE'", "'ORDER'", "'BY'", 
                     "'ASC'", "'DESC'", "'LIMIT'", "'OFFSET'", "'{'", "'.'", 
                     "'}'", "'OPTIONAL'", "'GRAPH'", "'UNION'", "'FILTER'", 
                     "'('", "','", "')'", "';'", "'a'", "'['", "']'", "'||'", 
                     "'&&'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'+'", "'-'", "'/'", "'!'", "'STR'", "'LANG'", "'LANGMATCHES'", 
                     "'DATATYPE'", "'BOUND'", "'sameTerm'", "'isIRI'", "'isURI'", 
                     "'isBLANK'", "'isLITERAL'", "'REGEX'", "'^^'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IRI_REF", 
                      "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", "VAR1", 
                      "VAR2", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", 
                      "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", 
                      "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", 
                      "EXPONENT", "STRING_LITERAL1", "STRING_LITERAL2", 
                      "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", "ECHAR", 
                      "NIL", "ANON", "PN_CHARS_U", "VARNAME", "PN_PREFIX", 
                      "PN_LOCAL", "WS" ]

    RULE_query = 0
    RULE_prologue = 1
    RULE_baseDecl = 2
    RULE_prefixDecl = 3
    RULE_selectQuery = 4
    RULE_constructQuery = 5
    RULE_describeQuery = 6
    RULE_askQuery = 7
    RULE_datasetClause = 8
    RULE_defaultGraphClause = 9
    RULE_namedGraphClause = 10
    RULE_sourceSelector = 11
    RULE_whereClause = 12
    RULE_solutionModifier = 13
    RULE_limitOffsetClauses = 14
    RULE_orderClause = 15
    RULE_orderCondition = 16
    RULE_limitClause = 17
    RULE_offsetClause = 18
    RULE_groupGraphPattern = 19
    RULE_triplesBlock = 20
    RULE_graphPatternNotTriples = 21
    RULE_optionalGraphPattern = 22
    RULE_graphGraphPattern = 23
    RULE_groupOrUnionGraphPattern = 24
    RULE_filter_ = 25
    RULE_constraint = 26
    RULE_functionCall = 27
    RULE_argList = 28
    RULE_constructTemplate = 29
    RULE_constructTriples = 30
    RULE_triplesSameSubject = 31
    RULE_propertyListNotEmpty = 32
    RULE_propertyList = 33
    RULE_objectList = 34
    RULE_object_ = 35
    RULE_verb = 36
    RULE_triplesNode = 37
    RULE_blankNodePropertyList = 38
    RULE_collection = 39
    RULE_graphNode = 40
    RULE_varOrTerm = 41
    RULE_varOrIRIref = 42
    RULE_var_ = 43
    RULE_graphTerm = 44
    RULE_expression = 45
    RULE_conditionalOrExpression = 46
    RULE_conditionalAndExpression = 47
    RULE_valueLogical = 48
    RULE_relationalExpression = 49
    RULE_numericExpression = 50
    RULE_additiveExpression = 51
    RULE_multiplicativeExpression = 52
    RULE_unaryExpression = 53
    RULE_primaryExpression = 54
    RULE_brackettedExpression = 55
    RULE_builtInCall = 56
    RULE_regexExpression = 57
    RULE_iriRefOrFunction = 58
    RULE_rdfLiteral = 59
    RULE_numericLiteral = 60
    RULE_numericLiteralUnsigned = 61
    RULE_numericLiteralPositive = 62
    RULE_numericLiteralNegative = 63
    RULE_booleanLiteral = 64
    RULE_string = 65
    RULE_iriRef = 66
    RULE_prefixedName = 67
    RULE_blankNode = 68

    ruleNames =  [ "query", "prologue", "baseDecl", "prefixDecl", "selectQuery", 
                   "constructQuery", "describeQuery", "askQuery", "datasetClause", 
                   "defaultGraphClause", "namedGraphClause", "sourceSelector", 
                   "whereClause", "solutionModifier", "limitOffsetClauses", 
                   "orderClause", "orderCondition", "limitClause", "offsetClause", 
                   "groupGraphPattern", "triplesBlock", "graphPatternNotTriples", 
                   "optionalGraphPattern", "graphGraphPattern", "groupOrUnionGraphPattern", 
                   "filter_", "constraint", "functionCall", "argList", "constructTemplate", 
                   "constructTriples", "triplesSameSubject", "propertyListNotEmpty", 
                   "propertyList", "objectList", "object_", "verb", "triplesNode", 
                   "blankNodePropertyList", "collection", "graphNode", "varOrTerm", 
                   "varOrIRIref", "var_", "graphTerm", "expression", "conditionalOrExpression", 
                   "conditionalAndExpression", "valueLogical", "relationalExpression", 
                   "numericExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "brackettedExpression", 
                   "builtInCall", "regexExpression", "iriRefOrFunction", 
                   "rdfLiteral", "numericLiteral", "numericLiteralUnsigned", 
                   "numericLiteralPositive", "numericLiteralNegative", "booleanLiteral", 
                   "string", "iriRef", "prefixedName", "blankNode" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    IRI_REF=59
    PNAME_NS=60
    PNAME_LN=61
    BLANK_NODE_LABEL=62
    VAR1=63
    VAR2=64
    LANGTAG=65
    INTEGER=66
    DECIMAL=67
    DOUBLE=68
    INTEGER_POSITIVE=69
    DECIMAL_POSITIVE=70
    DOUBLE_POSITIVE=71
    INTEGER_NEGATIVE=72
    DECIMAL_NEGATIVE=73
    DOUBLE_NEGATIVE=74
    EXPONENT=75
    STRING_LITERAL1=76
    STRING_LITERAL2=77
    STRING_LITERAL_LONG1=78
    STRING_LITERAL_LONG2=79
    ECHAR=80
    NIL=81
    ANON=82
    PN_CHARS_U=83
    VARNAME=84
    PN_PREFIX=85
    PN_LOCAL=86
    WS=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prologue(self):
            return self.getTypedRuleContext(SparqlParser.PrologueContext,0)


        def EOF(self):
            return self.getToken(SparqlParser.EOF, 0)

        def selectQuery(self):
            return self.getTypedRuleContext(SparqlParser.SelectQueryContext,0)


        def constructQuery(self):
            return self.getTypedRuleContext(SparqlParser.ConstructQueryContext,0)


        def describeQuery(self):
            return self.getTypedRuleContext(SparqlParser.DescribeQueryContext,0)


        def askQuery(self):
            return self.getTypedRuleContext(SparqlParser.AskQueryContext,0)


        def getRuleIndex(self):
            return SparqlParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = SparqlParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.prologue()
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SparqlParser.T__2]:
                self.state = 139
                self.selectQuery()
                pass
            elif token in [SparqlParser.T__6]:
                self.state = 140
                self.constructQuery()
                pass
            elif token in [SparqlParser.T__7]:
                self.state = 141
                self.describeQuery()
                pass
            elif token in [SparqlParser.T__8]:
                self.state = 142
                self.askQuery()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 145
            self.match(SparqlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrologueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseDecl(self):
            return self.getTypedRuleContext(SparqlParser.BaseDeclContext,0)


        def prefixDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.PrefixDeclContext)
            else:
                return self.getTypedRuleContext(SparqlParser.PrefixDeclContext,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_prologue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrologue" ):
                listener.enterPrologue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrologue" ):
                listener.exitPrologue(self)




    def prologue(self):

        localctx = SparqlParser.PrologueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prologue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SparqlParser.T__0:
                self.state = 147
                self.baseDecl()


            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SparqlParser.T__1:
                self.state = 150
                self.prefixDecl()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IRI_REF(self):
            return self.getToken(SparqlParser.IRI_REF, 0)

        def getRuleIndex(self):
            return SparqlParser.RULE_baseDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseDecl" ):
                listener.enterBaseDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseDecl" ):
                listener.exitBaseDecl(self)




    def baseDecl(self):

        localctx = SparqlParser.BaseDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_baseDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(SparqlParser.T__0)
            self.state = 157
            self.match(SparqlParser.IRI_REF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrefixDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PNAME_NS(self):
            return self.getToken(SparqlParser.PNAME_NS, 0)

        def IRI_REF(self):
            return self.getToken(SparqlParser.IRI_REF, 0)

        def getRuleIndex(self):
            return SparqlParser.RULE_prefixDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixDecl" ):
                listener.enterPrefixDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixDecl" ):
                listener.exitPrefixDecl(self)




    def prefixDecl(self):

        localctx = SparqlParser.PrefixDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prefixDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(SparqlParser.T__1)
            self.state = 160
            self.match(SparqlParser.PNAME_NS)
            self.state = 161
            self.match(SparqlParser.IRI_REF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whereClause(self):
            return self.getTypedRuleContext(SparqlParser.WhereClauseContext,0)


        def solutionModifier(self):
            return self.getTypedRuleContext(SparqlParser.SolutionModifierContext,0)


        def datasetClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.DatasetClauseContext)
            else:
                return self.getTypedRuleContext(SparqlParser.DatasetClauseContext,i)


        def var_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.Var_Context)
            else:
                return self.getTypedRuleContext(SparqlParser.Var_Context,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_selectQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectQuery" ):
                listener.enterSelectQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectQuery" ):
                listener.exitSelectQuery(self)




    def selectQuery(self):

        localctx = SparqlParser.SelectQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(SparqlParser.T__2)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SparqlParser.T__3 or _la==SparqlParser.T__4:
                self.state = 164
                _la = self._input.LA(1)
                if not(_la==SparqlParser.T__3 or _la==SparqlParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SparqlParser.VAR1, SparqlParser.VAR2]:
                self.state = 168 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 167
                    self.var_()
                    self.state = 170 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SparqlParser.VAR1 or _la==SparqlParser.VAR2):
                        break

                pass
            elif token in [SparqlParser.T__5]:
                self.state = 172
                self.match(SparqlParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SparqlParser.T__9:
                self.state = 175
                self.datasetClause()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.whereClause()
            self.state = 182
            self.solutionModifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructTemplate(self):
            return self.getTypedRuleContext(SparqlParser.ConstructTemplateContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SparqlParser.WhereClauseContext,0)


        def solutionModifier(self):
            return self.getTypedRuleContext(SparqlParser.SolutionModifierContext,0)


        def datasetClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.DatasetClauseContext)
            else:
                return self.getTypedRuleContext(SparqlParser.DatasetClauseContext,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_constructQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructQuery" ):
                listener.enterConstructQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructQuery" ):
                listener.exitConstructQuery(self)




    def constructQuery(self):

        localctx = SparqlParser.ConstructQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constructQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(SparqlParser.T__6)
            self.state = 185
            self.constructTemplate()
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SparqlParser.T__9:
                self.state = 186
                self.datasetClause()
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 192
            self.whereClause()
            self.state = 193
            self.solutionModifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescribeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def solutionModifier(self):
            return self.getTypedRuleContext(SparqlParser.SolutionModifierContext,0)


        def datasetClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.DatasetClauseContext)
            else:
                return self.getTypedRuleContext(SparqlParser.DatasetClauseContext,i)


        def whereClause(self):
            return self.getTypedRuleContext(SparqlParser.WhereClauseContext,0)


        def varOrIRIref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SparqlParser.VarOrIRIrefContext)
            else:
                return self.getTypedRuleContext(SparqlParser.VarOrIRIrefContext,i)


        def getRuleIndex(self):
            return SparqlParser.RULE_describeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescribeQuery" ):
                listener.enterDescribeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescribeQuery" ):
                listener.exitDescribeQuery(self)




    def describeQuery(self):
